--- a/README
+++ b/README
@@ -15,14 +15,15 @@ Authentication / Home page roadmap !
 -Connect Button : to confirm email address and password connection
 
 ****Home Page : ****
--Log-in Button : helps you to get to the Log-in to connect (user already has an account) (disappears after user connects) 
--Sign-up Button : helps you to get to the Sign-up menu to Create an account (disappears after user connects)
+-Log-in Button : A Button that helps you to get to the Log-in to connect (user already has an account) (disappears after user connects) 
+-Sign-up Button :  A Button that helps you to get to the Sign-up menu to Create an account (disappears after user connects)
 -Categories Bar : A bar full describing the user's categorie (if the user is a man, woman, kid, baby...)
--Products Search Bar : A search bar for the available products
--Add to Cart Little Menu : A little menu for the user that shows the added products (the user wishing to buy the products on the list) 
--Favorite Products List : A list that shows the user's favourit products (more like a wishlist)
--Account Button : A button that takes us to the user Dashboard (Information about the user)
+-Products Search Bar : A search bar for the product in search
+-Add to Cart Menu : A little menu for the user that displays the added products (the user wishing to buy the products selected on the list) 
+-Favorite Products List : A list that displays the user's favourit products (more like a wishlist can be developped as a seperate web page)
+-Account Button : A button that takes us to the user's Dashboard (Information about the user, Paiement methods...)
+-Product Area : An area the displays some Products (new products, products on discount, products on favorite list)
 
-IMPORTANT NOTE : there might be some modifications or additions in terms of functionalities during the developping process
+IMPORTANT NOTE : there might be some modifications (additions/deletion) in terms of functionalities during the developping process
  
 
